--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "portfolio2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,7 @@
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
-    "react-bootstrap": "^2.7.3",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
